clusters/olympus/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/hostname: whoami.nwlnexus.xyz
    external-dns.alpha.kubernetes.io/target: ing.compute.nwlnexus.net
    launcher.olympus.io/enabled: "true"
    launcher.olympus.io/display-name: "whoami"
    launcher.olympus.io/group: "Platform"
    launcher.olympus.io/icon: "globe"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.nwlnexus.xyz`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-tls
